syntax = "proto3";

package proto;

import "myproto/products.upload.request.proto";
import "myproto/response.proto";

service ProductService {
  rpc Upload(ProductsUploadRequest) returns (Response);
}