syntax = "proto3";

package proto;

import "myproto/product.item.proto";

message ProductsUploadRequest {
  repeated ProductItem items = 1;
}